fix overlapping bug with album cover and header

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -30,6 +30,7 @@ input {
   top: 0;
   width: 100%;
   box-shadow: 0 .25rem .5rem $black;
+  z-index: 10;
 }
 
 .topBar {
